Reset the IPMI password field after a save
Ticket: #18780

--- a/ui/sections/network/inspectors/ipmi.reel/ipmi.html
+++ b/ui/sections/network/inspectors/ipmi.reel/ipmi.html
@@ -9,7 +9,8 @@
             "properties": {
                 "element": {"#": "owner"},
                 "validationController": {"@": "validationController"},
-                "inspector": {"@": "inspector"}
+                "inspector": {"@": "inspector"},
+                "passwordComponent": {"@": "password"}
             }
         },
         "validationController": {
