Add default values to new VM disk devices
Ticket: #21249

--- a/ui/sections/vms/inspectors/virtual-machine-device.reel/virtual-machine-device.html
+++ b/ui/sections/vms/inspectors/virtual-machine-device.reel/virtual-machine-device.html
@@ -61,7 +61,8 @@
             },
             "bindings": {
                 "moduleId": {"<-": "@owner.moduleRoot + 'virtual-machine-device-' + @owner.object.type.toLowerCase() + '.reel'"},
-                "object": {"<-": "@owner.object.properties"}
+                "object": {"<-": "@owner.object.properties"},
+                "component.isNew": {"<-": "@owner.object._isNew"}
             }
         }
     }
