UPDATED: address and password property name to catch up with middleware changes

--- a/ui/sections/system/inspectors/alert.reel/mail.reel/mail.html
+++ b/ui/sections/system/inspectors/alert.reel/mail.reel/mail.html
@@ -70,7 +70,7 @@
                 "label": "From Email Address"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.from"}
+                "value": {"<->": "@owner.object.from_address"}
             }
         },
         "useSMTPAuth": {
@@ -125,7 +125,7 @@
                 "placeholder": "enter password"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.pass"}
+                "value": {"<->": "@owner.object.password"}
             }
         },
         "sendTestMail": {
