removes disk categories from view that don’t have disks adds message when there are not disks

--- a/ui/sections/storage/inspectors/available-disks.reel/available-disks.html
+++ b/ui/sections/storage/inspectors/available-disks.reel/available-disks.html
@@ -19,8 +19,11 @@
         "info": {
             "prototype": "blue-shark/ui/panel.reel",
             "properties": {
-                "element": {"#": "info"},
-                "message": "Drag disks to the left to add"
+                "element": {"#": "info"}
+            },
+            "bindings": {
+                "status" : {"<-": "@owner.disks.length > 0 ? 'error' : 'default' "},
+                "message": {"<-": "status == 'default' ? 'Drag disks to the left': 'No available disks'"}
             }
         },
         "hddsCategory": {
