--- a/ui/sections/storage/inspectors/available-disks.reel/disks-category.reel/disks-category.html
+++ b/ui/sections/storage/inspectors/available-disks.reel/disks-category.reel/disks-category.html
@@ -16,7 +16,8 @@
                 }
             ],
             "bindings": {
-                "classList.has('is-expanded')": {"<-": "@owner.isExpanded"}
+                "classList.has('is-expanded')": {"<-": "@owner.isExpanded"},
+                "classList.has('is-hidden')": {"<-": "!@owner.disks.length "}
             }
         },
         "controller": {
