layout edits on network settings, adds label to tables and sets min-width

--- a/ui/sections/network/controls/table-hosts.reel/table-hosts.html
+++ b/ui/sections/network/controls/table-hosts.reel/table-hosts.html
@@ -25,7 +25,8 @@
                 ]
             },
             "bindings": {
-                "rows": {"<->": "@owner.values"}
+                "rows": {"<->": "@owner.values"},
+                "label": {"<->": "@owner.label"}
             }
         },
 
