--- a/ui/sections/network/controls/table-routes.reel/table-routes.html
+++ b/ui/sections/network/controls/table-routes.reel/table-routes.html
@@ -28,7 +28,8 @@
                 ]
             },
             "bindings": {
-                "rows": {"<->": "@owner.values"}
+                "rows": {"<->": "@owner.values"},
+                "label": {"<->": "@owner.label"}
             }
         },
 
