each table td element should be wrapped in a div - fixes alert filter table layout

--- a/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-row-predicate.reel/table-row-predicate.html
+++ b/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-row-predicate.reel/table-row-predicate.html
@@ -54,7 +54,7 @@
             "bindings": {
                 "switchValue": {"<-": "@owner.object.emitter"}
             }
-        },     
+        },
         "pushBulletField": {
             "prototype": "blue-shark/ui/text.reel",
             "properties": {
@@ -70,7 +70,9 @@
         <div>
             <div data-montage-id="classValues"></div>
         </div>
-        <div data-montage-id="emitter"></div>
+        <div>
+            <div data-montage-id="emitter"></div>
+        </div>
         <div data-montage-id="substitution">
             <div data-arg="email">
                 <div>
