UPDATED: fix binding health_check

--- a/ui/sections/peering/inspectors/peer.reel/peer.html
+++ b/ui/sections/peering/inspectors/peer.reel/peer.html
@@ -65,7 +65,7 @@
             },
             "bindings": {
                 "units": {"<-": "@owner.intervalUnits"},
-                "value": {"<-": "@owner.object.health_check_interval"}
+                "value": {"<->": "@owner.object.health_check_interval"}
             }
         }
     }
