Add SASL wrapping option to AD
Ticket: #19252

--- a/ui/sections/accounts/inspectors/directory-services.reel/directory-service.reel/directory-service.html
+++ b/ui/sections/accounts/inspectors/directory-services.reel/directory-service.reel/directory-service.html
@@ -42,7 +42,7 @@
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
-                "isLoading": {"<-": "@content.isLoadingComponent"}
+                "isLoading": {"<-": "@content.isLoadingComponent || @content.component.isLoading"}
             }
         },
 
