Fix labels in AWS S3 peer

--- a/ui/sections/peering/inspectors/amazon-s3-credentials.reel/amazon-s3-credentials.html
+++ b/ui/sections/peering/inspectors/amazon-s3-credentials.reel/amazon-s3-credentials.html
@@ -22,7 +22,7 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "bucket"},
-                "label": "bucket"
+                "label": "Bucket"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.credentials.bucket"}
@@ -32,7 +32,7 @@
             "prototype": "blue-shark/ui/field-text-area.reel",
             "properties": {
                 "element": {"#": "access_key"},
-                "label": "access_key"
+                "label": "Access key"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.credentials.access_key"}
@@ -42,7 +42,7 @@
             "prototype": "blue-shark/ui/field-text-area.reel",
             "properties": {
                 "element": {"#": "secret_key"},
-                "label": "secret_key"
+                "label": "Secret key"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.credentials.secret_key"}
