Make date and time recognize the timezone (this is a partial fix, need a fix in the middleware client to handle system.general.update events, until then you have to refresh to see the new timezone)
Ticket: #20029

--- a/ui/main-sidebar/current-user-summary.reel/current-user-summary.html
+++ b/ui/main-sidebar/current-user-summary.reel/current-user-summary.html
@@ -36,8 +36,7 @@
                 "element": {"#": "date"}
             },
             "bindings": {
-                "args": {"<-": "!!@owner.now && {now: @owner.now}"},
-                "value": {"<-": "'{now, ' + @owner.datePattern + '}'"}
+                "value": {"<-": "@owner.date"}
             }
         },
         "time": {
@@ -46,8 +45,7 @@
                 "element": {"#": "time"}
             },
             "bindings": {
-                "args": {"<-": "!!@owner.now && {now: @owner.now}"},
-                "value": {"<-": "'{now, ' + @owner.timePattern + '}'"}
+                "value": {"<-": "@owner.time"}
             }
         }
     }
