Hide placeholder is it has no content

--- a/ui/controls/placeholder.reel/placeholder.html
+++ b/ui/controls/placeholder.reel/placeholder.html
@@ -7,6 +7,9 @@
         "owner": {
             "properties": {
                 "element": {"#": "owner"}
+            },
+            "bindings": {
+                "classList.has('hide')": {"<-": "!@owner.moduleId"}
             }
         }
     }
